# SDL_JoystickButtonNames

./: CMakeLists.txt  README.md  SDL_joystickbuttonnames.c  SDL_joystickbuttonnames.h  gamecontrollerbuttondb.txt  gamecontrollerdb.txt
examples/: CMakeLists.txt  checkGuid  check_guid.c  check_info.c  find_all_joy_buttons.c  minimal.c  minimal_without_rgb.c
modules/: FindSDL2.cmake
